4282 - migrated JavascriptSenderTest.java and JavascriptSenderCallbackTest.java to Junit 5